syntax = "proto3";
package shareledger.gentlemint;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gentlemint/exchange_rate.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/sharering/shareledger/x/gentlemint/types";

// Query defines the gRPC querier service.
service Query {
// Queries a exchangeRate by index.
	rpc ExchangeRate(QueryExchangeRateRequest) returns (QueryExchangeRateResponse) {
		option (google.api.http).get = "/shareledger/gentlemint/exchangeRate";
	}

// this line is used by starport scaffolding # 2
}

message QueryExchangeRateRequest {}

message QueryExchangeRateResponse {
	double rate = 1;
}

// this line is used by starport scaffolding # 3
